--- a/src/styles/scss/base/_base.scss
+++ b/src/styles/scss/base/_base.scss
@@ -33,3 +33,18 @@ body {
 .test {
   border: 2px solid red;
 }
+
+.responsive-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  position: relative;
+  max-width: 450px;
+
+  img {
+    vertical-align: middle;
+    width: 100%;
+    height: auto;
+  }
+}
