--- a/src/styles/scss/pages/_about.scss
+++ b/src/styles/scss/pages/_about.scss
@@ -2,10 +2,11 @@
 #about {
   background-image: linear-gradient(
       to right bottom,
-      rgba(0, 0, 0, 0.8),
-      rgba(0, 0, 0, 0.8)
+      rgba(0, 0, 0, $opacity),
+      rgba(0, 0, 0, $opacity)
     ),
     url(../../assets/images/header-background.jpg);
+  background-attachment: fixed;
 
   .profile-pic {
     max-width: 100%;
@@ -26,15 +27,18 @@
   }
 
   #about-content {
-    margin: $spacer-lg auto;
+    margin: 0 auto;
+    margin-top: $spacer-lg;
     line-height: 1.6rem;
     padding: $spacer-sm;
     // background: rgba(0, 0, 0, 0.3);
     border-left: $border-thickness solid rgba($accent-color, 0.3);
+    border-radius: 3px;
+  }
 
+  .frosted {
     background-color: rgba(255, 255, 255, 0.2);
-    /* box-shadow: none|h-offset v-offset blur spread color |inset|initial|inherit; */
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    // box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     /* For the fog-like glass effect */
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
