--- a/src/styles/scss/components/_timeline.scss
+++ b/src/styles/scss/components/_timeline.scss
@@ -1,7 +1,7 @@
 .year {
   font-family: $body-font;
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: $font-size-sm;
   color: $light-color;
 }
 
@@ -13,6 +13,10 @@
     p {
       text-align: left;
     }
+  }
+
+  .timeline-item-title {
+    font-size: $font-size-md;
   }
 
   &::after {
@@ -67,4 +71,80 @@
   /* For the fog-like glass effect */
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
+}
+
+// accordian
+
+.tab-input {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+}
+
+$tab-bg: rgba(255, 255, 255, 0.2);
+
+.tabs {
+  margin-top: $spacer-sm;
+  border-radius: 3px;
+  overflow: hidden;
+  // box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
+}
+.tab {
+  width: 100%;
+  color: $light-color;
+  overflow: hidden;
+  &-label {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+    background: $tab-bg;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    cursor: pointer;
+    /* Icon */
+    &:hover {
+      background: darken($tab-bg, 10%);
+    }
+    &::after {
+      content: "\276F";
+      width: 1em;
+      height: 1em;
+      text-align: center;
+      transition: all 0.35s;
+    }
+  }
+  &-content {
+    max-height: 0;
+    padding: 0 1em;
+    color: $light-color;
+    background: $dark-color;
+    transition: all 0.35s;
+  }
+  &-close {
+    display: flex;
+    justify-content: flex-end;
+    padding: 1em;
+    font-size: 0.75em;
+    background: $tab-bg;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    cursor: pointer;
+    &:hover {
+      background: darken($tab-bg, 10%);
+    }
+  }
+}
+
+// :checked
+input:checked {
+  + .tab-label {
+    background: darken($tab-bg, 10%);
+    &::after {
+      transform: rotate(90deg);
+    }
+  }
+  ~ .tab-content {
+    max-height: 100vh;
+    padding: 1em;
+  }
 }
