ease transition on hover

--- a/src/styles/scss/base/_typography.scss
+++ b/src/styles/scss/base/_typography.scss
@@ -79,6 +79,7 @@ p {
 a {
   text-transform: uppercase;
   color: $grey-color;
+  transition: 0.3s ease;
   &:not(.social-icon) {
     font-weight: 600;
   }
