--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -102,7 +102,8 @@ p {
 
 a {
   text-transform: uppercase;
-  color: #747474; }
+  color: #747474;
+  transition: 0.3s ease; }
   a:not(.social-icon) {
     font-weight: 600; }
   a:hover {
