about max-width

--- a/src/styles/scss/pages/_about.scss
+++ b/src/styles/scss/pages/_about.scss
@@ -34,6 +34,7 @@
     // background: rgba(0, 0, 0, 0.3);
     border-left: $border-thickness solid rgba($accent-color, 0.3);
     border-radius: 3px;
+    max-width: 40rem;
   }
 
   .frosted {
