--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -221,7 +221,8 @@ header {
     line-height: 1.6rem;
     padding: 1rem;
     border-left: 5px solid rgba(3, 149, 125, 0.3);
-    border-radius: 3px; }
+    border-radius: 3px;
+    max-width: 40rem; }
   #about .frosted {
     background-color: rgba(255, 255, 255, 0.2);
     /* For the fog-like glass effect */
