--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -13,6 +13,7 @@
 @import "./pages/about";
 @import "./pages/skills";
 @import "./pages/portfolio";
+@import "./pages/endorsements";
 @import "./pages/contact";
 
 @import "./components/skillbars";
