--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -49,6 +49,14 @@ body {
     width: 100%;
     height: auto; }
 
+.background-00 {
+  background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../../assets/images/section-background-00.jpg);
+  background-attachment: fixed; }
+
+.background-01 {
+  background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../../assets/images/section-background-01.jpg);
+  background-attachment: fixed; }
+
 @font-face {
   font-family: "Freight Text Bold";
   src: url("../../assets/fonts/Freight Text/Freight Text Bold.eot");
@@ -139,6 +147,13 @@ a {
       width: 100%;
       opacity: 1; }
 
+.frosted-card {
+  background-color: rgba(10, 10, 10, 0.4);
+  /* For the fog-like glass effect */
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(4px);
+  border-bottom: 10px solid rgba(3, 149, 125, 0.3); }
+
 section {
   min-height: 100%;
   width: 100%;
@@ -201,35 +216,27 @@ header {
     font-size: 1.5rem;
     padding: 0 2rem; }
 
-#about {
-  background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../assets/images/header-background.jpg);
-  background-attachment: fixed; }
-  #about .profile-pic {
-    max-width: 100%;
-    max-height: 150px;
-    border-radius: 50%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-right: 1rem; }
-  #about .section-header {
-    padding: 2rem; }
-  #about #bio {
-    text-align: justify;
-    padding: 1rem; }
-  #about #about-content {
-    margin: 0 auto;
-    margin-top: 4rem;
-    line-height: 1.6rem;
-    padding: 1rem;
-    border-left: 5px solid rgba(3, 149, 125, 0.3);
-    border-radius: 3px;
-    max-width: 40rem; }
-  #about .frosted {
-    background-color: rgba(255, 255, 255, 0.2);
-    /* For the fog-like glass effect */
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px); }
-  #about #facts {
-    margin: 2rem; }
+#about .profile-pic {
+  max-width: 100%;
+  max-height: 150px;
+  border-radius: 50%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-right: 1rem;
+  margin-top: 1rem; }
+
+#about .section-header {
+  padding: 2rem; }
+
+#about #about-content {
+  margin: 0 auto;
+  margin-top: 4rem;
+  line-height: 1.6rem;
+  padding: 2rem;
+  border-radius: 3px;
+  max-width: 40rem; }
+
+#about #facts {
+  margin: 2rem; }
 
 #skills #skill-container {
   margin: 2rem auto;
@@ -413,9 +420,9 @@ header {
   font-weight: 600; }
 
 #resume {
-  position: absolute;
-  bottom: 0;
-  left: 0; }
+  display: block;
+  margin: 0 auto;
+  margin-top: 2rem; }
 
 .filters {
   margin: 2rem auto; }
@@ -445,7 +452,7 @@ header {
 
 .timeline-item {
   padding: 2rem 2rem 1rem;
-  border-left: 5px solid #03957d; }
+  border-left: 10px solid #03957d; }
   .timeline-item .timeline-content h2,
   .timeline-item .timeline-content p {
     text-align: left; }
@@ -454,7 +461,7 @@ header {
   .timeline-item::after {
     content: "";
     color: black;
-    border: 5px solid #03957d;
+    border: 10px solid #03957d;
     height: 2rem;
     width: 2rem;
     position: absolute;
