--- a/src/styles/scss/components/_button.scss
+++ b/src/styles/scss/components/_button.scss
@@ -18,7 +18,10 @@
 }
 
 #resume {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  // position: absolute;
+  // bottom: 0;
+  // right: 0;
+  display: block;
+  margin: 0 auto;
+  margin-top: $spacer;
 }
