--- a/src/styles/scss/pages/_portfolio.scss
+++ b/src/styles/scss/pages/_portfolio.scss
@@ -4,6 +4,11 @@
     margin: 2rem auto;
   }
 
+  .disclaimer {
+    text-align: center;
+    font-style: italic;
+  }
+
   .portfolio-item {
     box-shadow: $box-shadow;
     position: relative;
