--- a/src/styles/scss/pages/_about.scss
+++ b/src/styles/scss/pages/_about.scss
@@ -7,6 +7,9 @@
     margin-right: $spacer-sm;
     margin-top: $spacer-sm;
   }
+  .bold {
+    font-weight: 700;
+  }
 
   .section-header {
     padding: $spacer;
@@ -27,5 +30,14 @@
 
   #facts {
     margin: $spacer;
+  }
+
+  .frosted-card {
+    background-color: rgba(199, 199, 199, 0.4);
+    // box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    /* For the fog-like glass effect */
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(4px);
+    border-bottom: $border-thickness solid rgba($accent-color, 0.3);
   }
 }
