--- a/src/styles/scss/pages/_contact.scss
+++ b/src/styles/scss/pages/_contact.scss
@@ -28,4 +28,13 @@
       width: 100%;
     }
   }
+
+  .frosted-card {
+    background-color: rgba(0, 0, 0, 0.4);
+    // box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    /* For the fog-like glass effect */
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(4px);
+    border-bottom: $border-thickness solid rgba($accent-color, 0.3);
+  }
 }
